--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Click on index.html: <br><img src="http://drp.io/files/530617faa31b5.png">
   <li>Make a <h3>Headline</h3></li>
   <li>Your headline here:</li> <h3>This is a Headline</h3>
   <li>Add an image (<a href="http://forum.koramgame.com/thread-60307-1-1.html">here's some help</a>): <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Smiley.svg/800px-Smiley.svg.png" height="50" width="50"</li>
-  <li>Your image here:</li> <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqWTFrMjd3W4TFMjY0VS-sIOBrwYoR8KGQCGaFhBAKbE17Qh1Fheight="50" width="50"</li>
+  <li>Your image here:</li> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqWTFrMjd3W4TFMjY0VS-sIOBrwYoR8KGQCGaFhBAKbE17Qh1F" height="50" width="50"</li>
   <li><a href="http://www.coceleratoru.com">Link</a> to some website.</li>
   <li>Your link here:</li>
   <li>Add another item to the bottom of this list!</li>
