--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ Click on index.html: <br><img src="http://drp.io/files/530617faa31b5.png">
   <li>Add an image (<a href="http://forum.koramgame.com/thread-60307-1-1.html">here's some help</a>): <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Smiley.svg/800px-Smiley.svg.png" height="50" width="50"</li>
   <li>Your image here:</li>  <img src="http://www.iphonejd.com/.a/6a010535fde333970c0120a90cc5b9970b-pi" height="50" width="50"</li>
   <li>Your image here:</li>  
-  <li><a href="http://www.coceleratoru.com">Link</a> to some website.</li>
-  <li>Your link here:</li>
+  <li><a href="http://www.coceleratoru.com">Link</a> to some website.</li> 
+  <li>Your link here:</li> <a href="http://www.facebook.com">
   <li>Add another item to the bottom of this list!</li>
   <li>Read about <a href="http://www.quackit.com/html/tags/">other HTML tags</a> and use one here that hasn't been used yet!</li>
 </ol>
