--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Click on index.html: <br><img src="http://drp.io/files/530617faa31b5.png">
   <li>Your image here:</li>  <img src="http://www.iphonejd.com/.a/6a010535fde333970c0120a90cc5b9970b-pi" height="50" width="50"</li>
   <li>Your image here:</li>  
   <li><a href="http://www.coceleratoru.com">Link</a> to some website.</li> 
-  <li>Your link here:</li> <a href="http://www.facebook.com">
+  <li>Your link here:</li> <a href="http://www.google.com">Link</a> to google.</li> 
   <li>Add another item to the bottom of this list!</li>
   <li>Read about <a href="http://www.quackit.com/html/tags/">other HTML tags</a> and use one here that hasn't been used yet!</li>
 </ol>
