--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Click on index.html: <br><img src="http://drp.io/files/530617faa31b5.png">
   <li>Your link here:</li> <a href="http://www.google.com">Link</a> to google.</li> 
   <li>Add another item to the bottom of this list!</li>
   <li>New item to the list!</li>
-  <li>Read about <a href="http://www.quackit.com/html/tags/">other HTML tags</a> and use one here that hasn't been used yet!</li> <h4 id="TEST">Exercise 3</h4> 
+  <li>Read about <a href="http://www.quackit.com/html/tags/">other HTML tags</a> and use one here that hasn't been used yet!</li> <h4 id="TEST">test</h4> 
 </ol>
 
 <h2 id="Exercise2">Exercise 2</h2>
