--- a/class13.html
+++ b/class13.html
@@ -25,7 +25,7 @@
         }
         /* Make a change below for Exercise 6*/
         h2 {
-          color: black;
+          color: pink;
         }
 
         .container {
@@ -95,6 +95,7 @@
 <ol>
 <li>CSS inline like this: <p style="color:blue;">This is Blue</p></li>
 <li>Now use the same method to make the word the correct color: Red</li>
+<p style="color:purple;">This is purple</p>
 <li>CSS full-page: Scroll to the top of this code, and look for the comment above h2, Change the color from black to <a href="http://www.somacon.com/p142.php">another color</a></li>
 </ol>
 
