--- a/class13.html
+++ b/class13.html
@@ -107,7 +107,7 @@
 
 <!--Embed your survey code below this line:--> <iframe src="https://docs.google.com/forms/d/1EhCuxqjHX0mg-BCMe_86hIYdDGty3LR6dohb4rTBPKM/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
-<!--Embed a youtube video below this line:-->
+<!--Embed a youtube video below this line:--> <iframe width="560" height="315" src="//www.youtube.com/embed/49PRiUdM2sw" frameborder="0" allowfullscreen></iframe>
 
 <h2 id="Exercise8">Exercise 8: Advanced</h2>
 
